Manual fixes for frame-background-mode.
* doc/custom.texi (Face Customization): Move discussion of face
inheritance here, from Faces section.

* doc/display.texi (Faces): Document frame-background-mode.

* doc/lispref/display.texi (Defining Faces): Move documentation of
frame-background-mode to the Emacs manual (Bug#7774).

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-05  Chong Yidong  <cyd@gnu.org>
+
+	* display.texi (Faces): Document frame-background-mode (Bug#7774).
+
+	* custom.texi (Face Customization): Move discussion of face
+	inheritance here, from Faces section.
+
 2012-07-21  Eli Zaretskii  <eliz@gnu.org>
 
 	* frames.texi (Mouse Commands): Fix the description of mouse-2.
