--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-05  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/lisp-mode.el (lisp-imenu-generic-expression): Don't
+	show defvars which have no second argument (Bug#8638).
+
+	* imenu.el (imenu-generic-expression): Move documentation here
+	from imenu--generic-function.
+	(imenu--generic-function): Refer to imenu-generic-expression.
+
 2012-08-05  Vegard Øye  <vegard_oye@hotmail.com>  (tiny change)
 
 	* emulation/viper-init.el (viper-deflocalvar): Add docstring and
