--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-06  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	Make internal shell process buffer names start with space.
+	* progmodes/python.el (python-shell-make-comint): Add optional
+	argument INTERNAL.
+	(run-python-internal): Use it.
+	(python-shell-internal-get-or-create-process): Check for new
+	internal buffer names.
+
 2012-08-06  Glenn Morris  <rgm@gnu.org>
 
 	* eshell/esh-ext.el (eshell/addpath): Use dolist.
