--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -21,7 +21,7 @@
 
 2012-08-06  Glenn Morris  <rgm@gnu.org>
 
-	* eshell/esh-ext.el (eshell/addpath): Use dolist.
+	* eshell/esh-ext.el (eshell/addpath): Use dolist and mapconcat.
 	Do less getting and setting of environment variables.
 
 2012-08-05  Chong Yidong  <cyd@gnu.org>
