--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-06  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Fix replacement typo.
+	* window.c (replace_window): Set root_window instead of
+	selected_window.  This fixes a total window subsystem
+	malfunction reported by Bastien Guerry <bzg@gnu.org>.
+
 2012-08-06  Glenn Morris  <rgm@gnu.org>
 
 	* lisp.mk (lisp): Add language/persian.elc.
