--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-06  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (GNU_LIBRARY_PENDING_OUTPUT_COUNT): Remove.
+	(PENDING_OUTPUT_COUNT): Absorb GNU_LIBRARY_PENDING_OUTPUT_COUNT.
+	(DISPNEW_NEEDS_STDIO_EXT): New define.
+
 2012-08-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* INSTALL: Explain, how to disable D-Bus at all.  (Bug#12112)
