--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-06  Glenn Morris  <rgm@gnu.org>
+
+	* dispnew.c (GNU_LIBRARY_PENDING_OUTPUT_COUNT, PENDING_OUTPUT_COUNT):
+	Let configure handle it.
+	(stdio_ext.h) [DISPNEW_NEEDS_STDIO_EXT]: Include it.
+
 2012-08-06  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Use GCALIGNMENT where appropriate.
