--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-07  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac: Require automake 1.11 (fairly arbitrarily).
+	* autogen.sh (automake_min): Get it from configure.ac.
+
 2012-08-06  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac (BROKEN_GETWD) [unixware]: New define.
