--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-07  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* configure.ac: New option --disable-features.
+	(OPTION_DEFAULT_ON): Change to use enable_features.
+	* INSTALL: Explain --disable-features.
+
 2012-08-07  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac: Require automake 1.11 (fairly arbitrarily).
