--- a/INSTALL
+++ b/INSTALL
@@ -319,6 +319,20 @@ systems which support that.
 
 Use --without-sound to disable sound support.
 
+Use --disable-features if you want to build small executable with
+the minimal dependencies from an external libraries, at the cost
+of disabling most of the features which are enabled by default.
+Using --disable-features is equivalent to --without-sound --without-dbus
+--without-libotf --without-selinux --without-xft --without-gsettings
+--without-gnutls --without-rsvg --without-xml2 --without-gconf
+--without-imagemagick --without-m17n-flt --without-jpeg --without-tiff
+--without-gif --without-png --without-gpm.  Note that --disable-features
+leaves X support enabled, and using GTK2 or GTK3 toolkit creates a lot
+of library dependencies.  So if you want to build small executable with
+the very basic X support, use --disable-features --with-x-toolkit=no.
+For the smallest possible executable without X, use --disable-features
+--without-x.
+
 Use --with-wide-int to implement Emacs values with the type 'long long',
 even on hosts where a narrower type would do.  With this option, on a
 typical 32-bit host, Emacs integers have 62 bits instead of 30.
