--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,12 @@
 2012-08-07  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	Drop PGET and revert read access to Lisp_Objects slots of Lisp_Process.
+	* process.h (PGET): Remove.
+	(struct Lisp_Process): Do not use INTERNAL_FIELD.
+	* gnutls.c, print.c, process.c, sysdep.c, w32.c, xdisp.c: Adjust users.
+
+2012-08-07  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Drop WGET and revert read access to Lisp_Objects slots of struct window.
 	* window.h (WGET): Remove.
 	(struct window): Do not use INTERNAL_FIELD.
