--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-07  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* progmodes/autoconf.el (font-lock-syntactic-keywords): Don't
+	declare.
+
 2012-08-07  Chong Yidong  <cyd@gnu.org>
 
 	* simple.el (deactivate-mark): Preserve text properties when
