--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-08-07  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* emacs-lisp/lisp-mode.el (eval-defun-1): Handle standard value of
+	a defcustom that is quoted with backquote.
+
 	* calc/calc-prog.el (math-do-defmath): Use backquote forms.  Fix
 	handling of interactive spec when the body uses return.
 	(math-do-arg-check, math-define-function-body): Use backquote forms.
